--- a/frontend/TODO
+++ b/frontend/TODO
@@ -24,7 +24,16 @@ Tervek backend el: (NextJs)
 
 singlecar started,(need cleanup)
 
+TODO:
+    //nálam gyakran lejár, de sztem egyenlőre így jó
+    //ha lejár akkor újat kell kérni
+    //ha kijelentkeznénk akkor ne lehessen ugyan azzal a tokennel belépni,
+    //ez lehet úgy is ahogy az Erik csinálta, vagy sztem 10 percre beállítom
+    //és ha kell újítani akkor megújjitom
+    //de mi a feltétele, hogy megújjítsam a tokent?
+    
 
 TODO:az admin jog nem az autc user==admin döntse el ,hanem a rightID alapján
 először működjön minden lekérdezés, utána lehet a védelemre ráállni pl: axios?? és jwt!
+Erik től a header ből való átolvasást lenézni??
 profil és beállítások elkészítése (profilkép, jelszó válltás stb.)
