--- a/frontend/TODO.txt
+++ b/frontend/TODO.txt
@@ -28,7 +28,9 @@ TODO:Admin page videó vagy elérhetővé tétele, az ÉLES WEBOLDALON!!
 TODO:Megolást keresni az image feltöltéssel, és annak moderálásával kapcsolatban
 
 Esetleg rate limitelni az appot, védeni botok ellen,
-Írni egy leírást Githubra is
+
+Írni egy leírást Githubra is (README)
+Megoldani, az újratöltést hogy normálisan működjenek
 
 HA MINDEN MEGVAN, akkor a kódot tisztítsuk le, pl többször használunk ugyan olyan. vagy hasonló dolgokat (pls fetch)
 azt szervezzük ki, tisztítsuk meg, a regisztrcásiót, pl vigyük át az authcontext be
